fixed overlapping scrollbar

--- a/src/containers/home/styles.scss
+++ b/src/containers/home/styles.scss
@@ -51,8 +51,7 @@
   left: 0;
   top: 0;
   height: 100%;
-  overflow-y: auto;
-  overflow-x: hidden;
+  overflow: hidden;
 
   &.sorting {
     li {
@@ -78,6 +77,7 @@
 
 .focus {
   z-index: 1;
+  overflow-y: auto;
 
   .listItemWrap {
     opacity: 1;
